# tauri

./: Cargo.toml
.changes/: nsis-sign-plugins.md
core/tauri/: Cargo.toml  build.rs
core/tauri-runtime-wry/src/: lib.rs
core/tauri/scripts/: ipc-protocol.js
core/tauri/src/: app.rs
core/tauri/src/ipc/: protocol.rs
crates/tauri-bundler/src/bundle/windows/nsis/: mod.rs
multiwebview/: Cargo.toml  tauri.conf.json
multiwebview/src/: main.rs
patches/: tauri_beta.17_ipc_fallback.patch
tooling/bundler/src/bundle/macos/: sign.rs
