[package]
name = "multiwebview"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde_json = "1.0.111"
tauri = {path = "../core/tauri", features = [] }

[build-dependencies]
tauri-build = { path = "../core/tauri-build", features = [] }
